tests/errors/polymorphism_id_id.eff
let u x = x ;;
let v = u u ;;
check (v 42, v "foo") ;;

